--- a/main-page.html
+++ b/main-page.html
@@ -12,7 +12,7 @@
 <body>
      <div class="main-div">
             <div class="home-page-img-backgrount">
-bvb
+                <span class="amount-cealings-text">Расчёт стоимости работы за натяжку потолков</span>
             </div>
      </div>
 </body>
