Revert "save chenged"
This reverts commit 66ed59362fb0bee74597c036c26088b9e7d1770e.

--- a/main-page.html
+++ b/main-page.html
@@ -12,7 +12,7 @@
 <body>
      <div class="main-div">
             <div class="home-page-img-backgrount">
-                <span class="amount-cealings-text">Расчёт стоимости работы за натяжку потолков</span>
+bvb
             </div>
      </div>
 </body>
