save chenged added button and chenged in style opacity and margin-top

--- a/main-page.html
+++ b/main-page.html
@@ -13,6 +13,7 @@
      <div class="main-div">
             <div class="home-page-img-backgrount">
                 <span class="amount-cealings-text">Расчёт стоимости работы за натяжку потолков</span>
+                <button>Кнопка</button>
             </div>
      </div>
 </body>
